# gollama

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/gollama/: __main__.py  gcloud.py  model.py  registry.py  utils.py
tests/: test_parser.py  test_utils.py
tests/__snapshots__/: test_parser.ambr  test_utils.ambr
tests/fixtures/: microsoft-phi-4-latest
